--- a/meshmight/package.json
+++ b/meshmight/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@web3forms/react": "^1.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.70.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
