- Changed build output folder - Changed icon

--- a/meshmight/package.json
+++ b/meshmight/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "build:format": "next build && node format-html.js",
+    "build": "next build && node copy-output.js",
+    "build:format": "next build && node copy-output.js && node format-html.js",
     "start": "next start",
     "lint": "eslint"
   },
